@@ -1,4 +1,20 @@
 -----------------------------------------------------------------------------
+-- Mail
+-----------------------------------------------------------------------------
+
+ CREATE TABLE [mail]
+ (
+   [sender_id] INTEGER NOT NULL PRIMARY KEY,
+   [sender_name] VARCHAR(24),
+   [reciever_id] INTEGER NOT NULL,
+   [reciever_name] VARCHAR(24),
+   [mail_title] VARCHAR(40),
+   [mail_message] TINYTEXT
+   [mail_time] INTEGER NOT NULL,
+   [mail_read] TINYINT NOT NULL,
+   ) ENGINE=MyISAM;
+   
+-----------------------------------------------------------------------------
 -- Quests
 -----------------------------------------------------------------------------
 
@@ -10,11 +26,11 @@ CREATE TABLE [quests]
  
 CREATE TABLE [quest_reqs]
 (
-  `id` INTEGER NOT NULL PRIMARY KEY,
-  `quest_count` INTEGER NOT NULL,
-  `quest_name` VARCHAR(255),
-  `quest_num` INTEGER NOT NULL PRIMARY KEY,
-  `char_id` INTEGER NOT NULL PRIMARY KEY,
+  [id] INTEGER NOT NULL PRIMARY KEY,
+  [quest_count] INTEGER NOT NULL,
+  [quest_name] VARCHAR(255),
+  [quest_num] INTEGER NOT NULL PRIMARY KEY,
+  [char_id] INTEGER NOT NULL PRIMARY KEY,
 );
 
 -----------------------------------------------------------------------------
@@ -35,12 +51,12 @@ CREATE TABLE [auction]
   [nameid] INTEGER NOT NULL,
   [item_name] INTEGER NOT NULL,
   [type] INTEGER NOT NULL,
-  `[refine] INTEGER NOT NULL,
-  `[attribute] INTEGER NOT NULL,
-  `[card0] INTEGER NOT NULL,
-  `[card1] INTEGER NOT NULL,
-  `[card2] INTEGER NOT NULL,
-  `[card3] INTEGER NOT NULL,
+  [refine] INTEGER NOT NULL,
+  [attribute] INTEGER NOT NULL,
+  [card0] INTEGER NOT NULL,
+  [card1] INTEGER NOT NULL,
+  [card2] INTEGER NOT NULL,
+  [card3] INTEGER NOT NULL,
 );
 -----------------------------------------------------------------------------
 -- Characters
